Changes for 2.1.3

New features:
.......PS. [ZBX-6852] removed support of iODBC (Sasha)
A.F.I..... [ZBXNEXT-1569] implemented user name and surname displaying in acknowledgements (Ivo, Oleg)

Bug fixes:
..F....... [ZBX-6275] fixed error after saving an LLD rule (Guntis)
..F....... [ZBX-6275] fixed several "error" column displaying problems in template item and trigger list (Guntis)
..F.....S. [ZBX-6882] fixed "Undexined index" on queue page; server won't include lld-rules in queue (Eduard, Sasha)

--------------------------------------------------------------------------------
Changes for 2.1.2

New features:
..F....... [ZBXNEXT-1851] hid Finnish, Lithuanian and Swedish translations from the frontend (Pavels, Richlv)
...G...PS. [ZBXNEXT-1405] added IP to the warning about ignored messages because of their size (wiper)
........S. [ZBX-6770] improved host macro resolving by using configuration cache to get hosts used in trigger expressions (wiper)
.......PS. [ZBXNEXT-1098] added internal check support to Zabbix proxies (wiper)
...GI..... [ZBX-6587] fixed Windows binary descriptions (dimir)
...G...... [ZBXNEXT-1528] added net.if.in, net.if.out and net.if.total item support on HP-UX platform (igors)

Bug fixes:
.......P.. [ZBX-6897] fixed synchronization of the "httptest" configuration table (Sasha)
........S. [ZBX-6898] fixed processing of queue request; not checked items will be included to the queue (Sasha)
........S. [ZBX-6889] fixed processing of availability data by the server (Sasha)
A......... [ZBX-6885] fixed host group error message on delete (Vitalij)
....I..... [ZBX-1583] removed duplicated indexes for 6 tables when using MySQL (igors)
..F....... [ZBX-6864] fixed fullscreen parameter validation (Vitalij)
A.F....... [ZBX-6865] fixed "NULL" value validation (Ivo)
..F....... [ZBX-6863] fixed severity buttonset colors displayng (Eduard)
A......... [ZBX-6386] fixed discovered fields update validation in items, triggers and graphs (Eduard)